@@ -89,8 +89,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <release>21</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -99,6 +98,10 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>tech.xueyao.tooool.ToooolApplication</mainClass>
+                    <options>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                    </options>
                 </configuration>
                 <executions>
                     <execution>
@@ -112,9 +115,6 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
-                            <options>
-                                <option>--icon=src/main/resources/app.png</option>
-                            </options>
                         </configuration>
                     </execution>
                 </executions>
